add_executable(map_test "map_test.cpp")
add_executable(chrono_test "chrono_test.cpp")
add_executable(vector_test vector_test.cpp)
add_executable(algorithm_test algorithm_test.cpp)
add_executable(template_test "template_test.cpp")
add_executable(meta_program meta_program.cpp)
add_executable(unordered_set_map unordered_set_map.cpp)
add_executable(function_test function_test.cpp)
add_executable(smart_pointer_test "smart_pointer_test.cpp")
add_executable(stream_test "stream_test.cpp")
