
add_executable(chrono_test "chrono_test.cpp")
add_executable(template_test "template_test.cpp")
add_executable(meta_program meta_program.cpp)
add_executable(function_test function_test.cpp)

add_executable(pair_tuple_test "pair_tuple_test.cpp")

add_executable(smart_pointer_test "smart_pointer_test.cpp")
add_executable(lvalue_rvalue_test "lvalue_rvalue_test.cpp")

# STL-序列式容器(sequence container)
add_executable(stl_vector_test "stl_vector_test.cpp")

# STL-关联式容器(ordered associative container)
add_executable(stl_ordered_set "stl_ordered_set.cpp")
add_executable(stl_ordered_map "stl_ordered_map.cpp")

# STL-无序容器(unordered associative container)
add_executable(stl_unordered_set "stl_unordered_set.cpp")
add_executable(stl_unordered_map "stl_unordered_map.cpp")

# 迭代器和迭代适配器
add_executable(stl_iterator_test "stl_iterator_test.cpp")

# STL-算法(algorithm)
add_executable(stl_algorithm_test "stl_algorithm_test.cpp")

# 字符串
add_executable(string_test "string_test.cpp")

# stream
add_executable(stream_file_test "stream_file_test.cpp")

